fixed problem where text in title or content would not word wrap when viewing a post if there were no spaces in the text. i also made a small change to the javascript that prevents the title from being blank spaces

--- a/development/sass/style.scss
+++ b/development/sass/style.scss
@@ -180,7 +180,8 @@ button, button:focus{
 
     .title{
       width: 90%;
-
+      word-wrap: break-word;
+      
       margin: 50px auto 0 auto;
 
       font-size: 75px;
@@ -188,6 +189,8 @@ button, button:focus{
 
     .content{
       width: 90%;
+
+      word-wrap: break-word;
 
       margin: 25px auto 25px auto;
     }
